--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -15,26 +7,22 @@
 
 h2 {
   padding-top: 50px;
-}
-
-.catalogo {
-  display: flex;
-  justify-content: center;
-  padding-top: 200px;
-}
-
-.itemCatalogo {
   text-align: center;
-  border: 1px solid black;
-  width: 1fr;
-  height: 150px;
-  margin: 15px;
-  
+}
+.Catalogo {
+  text-align: center;
+}
+.Item {
+  display: inline-block;
+  margin: 10px;
+  padding: 40px;
+  border: 4px solid black;
 }
 
-.stockData {
-  display: inline
+li {
+  list-style-type: none;
 }
+
 
 .CounterContainer {
   display: inline;
@@ -46,5 +34,43 @@ h2 {
   margin: 5px;
 }
 
+.popup-box {
+  position: fixed;
+  background: #00000050;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+}
+ 
+.box {
+  position: relative;
+  width: 70%;
+  margin: 0 auto;
+  height: auto;
+  max-height: 70vh;
+  margin-top: calc(100vh - 85vh - 20px);
+  background: #fff;
+  border-radius: 4px;
+  padding: 20px;
+  border: 1px solid #999;
+  overflow: auto;
+}
+ 
+.close-icon {
+  content: 'x';
+  cursor: pointer;
+  position: fixed;
+  right: calc(15% - 30px);
+  top: calc(100vh - 85vh - 33px);
+  background: #ededed;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  line-height: 20px;
+  text-align: center;
+  border: 1px solid #999;
+  font-size: 20px;
+}
 
 
